<resources>
    <string name="app_name">CiclismoApp</string>
    <!-- Iniciar Seccion -->
    <string name="EditTextEmailIS">Correo Electronico</string>
    <string name="EditTextPasswordIS">Contraseña</string>
    <string name="buttonIniciarSeccionIS">Inciar Seccion</string>
    <string name="buttonRegistrarseIS">Registrarse</string>

    <!-- Registrarse -->
    <string name="editTextEmailR">Correo Electronico</string>
    <string name="editTextPasswordR">Contraseña</string>
    <string name="editTextTelfR">Nombre</string>
    <string name="editTextNameR">Numero Celular</string>
    <string name="buttonRegistrarseR">Inciar Seccion</string>
    <string name="buttonIniciarSeccionR">Registrarse</string>

    <!-- Mapa -->
    <string name="buttonInciarSeccionM">Volver Inicio Seccion</string>
    <string name="buttonMostrarRutasM">Mostrar Rutas</string>
    <string name="title_activity_editar_perfil">EditarPerfilActivity</string>
    <string name="buttonMostrarUbicacionM">Mostrar Ubicacion</string>

    <!-- Mostrar Rutas -->
    <string name="textViewTitleMR">Lista De Rutas</string>
    <string name="buttonVolverMR">Volver Ubicacion Actual</string>

    <!-- FITNET FLIX -->
    <string name="buttonRegistrarseFF"> Volver Inicio Seccion</string>

    <!-- Bienvenida -->
    <string name="buttonComenzarBv">COMENZAR</string>
    <string name="textViewBienvenidoB">Bienvenido</string>
    <string name="textViewBienvenido2B">App para la gestion de rutas</string>

    <!-- button_nav_menu -->
    <string name="homeNVM">Casa</string>
    <string name="perfilNVM">Perfil</string>
    <string name="locationNVM">Localizacion</string>
    <string name="routesNVM">Rutas</string>
    <string name="placeholderNVM"></string>

    <!-- Key API Google Mpas -->
    <string name="KeyApiGoogleMaps">AIzaSyDZjWmDiE-IC5bZvS8YuqRuHQnIEbsllFM</string>
    <string name="APPkEY">AIzaSyDZjWmDiE-IC5bZvS8YuqRuHQnIEbsllFM</string>

    <!-- scrow viue -->
    <string name="dummy_text"> hola funciono</string>
    <string name="ButomFragmentClose">Cerrar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="TitutloDetalleRuta">Titulo Ruta</string>
    <string name="DescripcionRuta">Descripcion Ruta</string>


</resources>