<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/FragmentoPrincipal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.InformacionFragment"
    android:background="@drawable/button_rounder"
    android:orientation="vertical">

    <!-- TODO: Update blank fragment layout -->


    <TextView
        android:id="@+id/text1"
        android:textColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/TitutloDetalleRuta"
        android:textAlignment="center"
        android:gravity="center"
        android:textSize="25dp" />

    <TextView
        android:id="@+id/text2"
        android:textColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/DescripcionRuta"
        android:textAlignment="center"
        android:gravity="center"
        android:textSize="20dp" />

    <Button
        android:id="@+id/BtnCloseFragmentRoute"
        android:textColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:background="@drawable/cuadroamarillo"
        android:text="@string/ButomFragmentClose"
        android:gravity="center"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="70dp"
        android:textSize="25dp"></Button>



</androidx.appcompat.widget.LinearLayoutCompat>